<resources>
    <string name="app_name">Carista</string>
    <string name="tab_text_1">Posts</string>
    <string name="tab_text_2">Upload</string>
    <string name="posts_fragment_title">Posts</string>

    <string name="api_root" translatable="false">http://192.168.1.65:5000/</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tab_text_3">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="theme">Switch Theme</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="select_image">Capture or select</string>
    <string name="error_getting_image">Error selecting image</string>
    <string name="insert_title">Insert title!</string>
    <string name="failed_to_upload">Failed to upload image</string>
    <string name="new_upload_title">Post title</string>
    <string name="dummy_upload">Upload a new post</string>

    <string name="label_brush">Brush</string>
    <string name="label_text">Text</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="msg_save_image">Save image</string>
    <string name="label_eraser_mode">Ereaser mode</string>
    <string name="label_filter">Filter</string>
    <string name="msg_save_image_to_share">Save to share image</string>
    <string name="msg_share_image">Share image</string>

    <string name="success_upload">Post uploaded!</string>
    <string name="network_unavailable">Network unavailable, loading from cache</string>
    <string name="dark_theme_enabled">DarkTheme</string>
    <string name="dark_theme_pref">DarkThemePref</string>
    <string name="change_nickname">Tap on the welcome message to change your nickname</string>
    <string name="username">Username</string>
    <string name="change">Change</string>
    <string name="new_nickname">New Nickname</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="exit_editor_confirm_message">Do you really want to quit?</string>
    <string name="continue_editing">Continue editing</string>
    <string name="discard">Discard</string>

    <string name="edit_shortcut_short_label">Editor</string>
    <string name="edit_shortcut_long_label">Editor</string>
    <string name="user_shortcut_short_label">Me</string>
    <string name="user_shortcut_long_label">Me</string>
    <string name="check_for_update">Check for updates</string>
    <string name="already_on_latest_update">You are already using the latest version of the app!</string>
    <string name="update">Update</string>
    <string name="new_update_available">A new update available (%1$s)\nWould you like to install it?</string>
    <string name="an_error_has_occurred">An error has occurred!</string>
    <string name="comments_title">Comments</string>
    <string name="post_comment_here">Add a comment...</string>
    <string name="comment_posted_success">Comment posted successfully!</string>
    <string name="login_error">Error logging in!</string>
</resources>