<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upload_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.UploadActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_upload"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/upload_card"
        app:layout_constraintBottom_toTopOf="@id/upload_card"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20dp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/upload_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/new_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_upload_title"
                android:layout_marginBottom="15dp"
                android:textSize="20dp"
                android:background="@drawable/upload_edit_text"
                android:layout_margin="10dp"
                android:textColorHint="#918B8B"
                android:maxLines="4"
                android:textColor="@color/black"
                />

            <ImageView
                android:id="@+id/new_post_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp"
                android:background="@drawable/upload_edit_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/new_post_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/choose"
                    android:textAllCaps="false"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/new_post_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:text="@string/upload" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>